--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "browserify-fs": "^1.0.0",
     "eslint": "^6.6.0",
     "firebase": "^9.6.11",
+    "framer-motion": "^6.3.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^2.1.4",
     "write-json-file": "^5.0.0"
   },
@@ -29,7 +31,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
