--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-transition-group": "^4.4.2",
     "web-vitals": "^2.1.4",
     "write-json-file": "^5.0.0"
