--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cocktails",
   "version": "0.1.0",
-  "homepage": "https://Lenoms.github.io/cocktails",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.10.2",
