--- a/amplify.yml
+++ b/amplify.yml
@@ -14,3 +14,13 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
+  customHeaders:
+    - pattern: "**/*"
+      headers:
+        - key: Cache-Control
+          value: max-age=0,no-cache,no-store,must-revalidate
+  redirects:
+    # Single Page App rewrite: send all non-file requests to /index.html
+    - source: </^[^.]+$|(\.[^/]+$)/>
+      target: /index.html
+      status: 200
