--- a/amplify.yml
+++ b/amplify.yml
@@ -9,6 +9,8 @@ frontend:
         - npm run build
         - mkdir -p build/cocktails
         - cp -r build/static build/cocktails/
+        - cp build/*.png build/cocktails/
+        - cp build/*.ico build/cocktails/
   artifacts:
     baseDirectory: build
     files:
