Migrate to using dynamodb! Swapped over service functions and refactored all components to use some naming structure changes and line things up. Also removed filters.

--- a/package.json
+++ b/package.json
@@ -95,6 +95,9 @@
     ]
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.940.0",
+    "@aws-sdk/lib-dynamodb": "^3.940.0",
+    "crypto": "^1.0.1",
     "gh-pages": "^3.2.3"
   },
   "jest": {
